login and sign up

--- a/metropolitan-museum/src/App.css
+++ b/metropolitan-museum/src/App.css
@@ -112,3 +112,11 @@
   max-height: 500px;
   max-width: 90%;
 }
+
+.userControl {
+  margin-left: 10px;
+}
+
+.userControl button {
+  margin-left: 5px;
+}
